gcc/testsuite/rust/rustc/ui/parser/missing-closing-angle-bracket-struct-field-ty.rs
// run-rustifx
#![allow(unused)]
use std::sync::{Arc, Mutex};

pub struct Foo {
    a: Mutex<usize>,
    b: Arc<Mutex<usize>, // { help "" "" { target *-*-* } }
    c: Arc<Mutex<usize>>,
} // { dg-error "" "" { target *-*-* } }

fn main() {}

